# django-ninja-api-starter

./: .coverage  .dockerignore  .flake8  .gitignore  .windsurf  Dockerfile  README.md  compose.production.yaml  conftest.py  docker-compose.yml  env.example  env.production.example  gunicorn.conf.py  kamal.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  typecheck.yml
.kamal/: secrets
DjangoApiStarter/: api.py  asgi.py  celery.py  middleware.py  settings.py  test_urls.py  urls.py  wsgi.py
DjangoApiStarter/settings/: __init__.py  base.py  ci.py  development.py  production.py  test.py  test_postgres.py
DjangoApiStarter/tests/: test_api.py  test_api_error_shape.py  test_api_error_shape_images.py  test_change_password.py  test_delete_account.py  test_idempotency_bulk.py  test_image_attach_detach.py  test_image_success_and_delete.py  test_image_upload_validations.py  test_jwt.py  test_logout.py  (+6 more)
accounts/: admin.py  api.py  browser_api.py  models.py  operations.py  profile.py  schemas.py  serializers.py  services.py  signals.py  tasks.py  throttles.py  tokens.py  username.py  username_validation.py  users_api.py  validation.py
config/: deploy.yml
contacts/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  signals.py  throttles.py  validation.py
core/: admin.py  api_errors.py  authentication.py  email_utils.py  error_reporting.py  health.py  models.py  schemas.py  tasks.py
deploy/: Caddyfile  backup-postgres.sh  restore-postgres.sh
docs/: admin-section.md  api-routes.md  api-setup.md  architecture.md  celery-and-redis.md  changelog.md  contacts.md  deployment.md  docker-local-development-guide.md  docker-setup.md  email-reset-flow.md  environment.md  gunicorn-setup.md  improvements.md  openapi.json  operations.md  organizations-api.md  polymorphic-images.md  polymorphic-tags.md  postgis.md  security.md  sharing-brainstorm.md  styleguide.md  tagging.md  testing-for-image-uploads.md  testing.md  upgrades.md
images/: admin.py  api.py  api_schemas.py  models.py  operations.py  schemas.py  serializers.py  services.py  tasks.py  throttles.py  views.py
organizations/: access.py  admin.py  api_export.py  export_archive.py  export_tasks.py  models.py  permissions.py  scope.py  services.py  signals.py
scripts/: export_openapi.py  provider_smoke.py
tags/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py  validation.py
(+147 files in other folders)
